* Fixed miss spell.

--- a/texts/a_novel_web_application_frame_developed_by_mvc.tex
+++ b/texts/a_novel_web_application_frame_developed_by_mvc.tex
@@ -121,4 +121,8 @@ messageを入れ，Model Centerはmessageキューを全て走査し，まだ処理されてい
 る．このフレームを使ったWebアプリケーションシステムは中国のUESTで動いて
 いる(http://www.uestc.edu.cn)．
 
+\section{須藤の現在の考え}
+\includegraphics[width=7.8cm]{../images/components.eps}
+
+
 \end{document}
