--- a/texts/distributed_scheme.tex
+++ b/texts/distributed_scheme.tex
@@ -35,7 +35,7 @@
  
  \section{構造}
 
- オブジェクトを公開するプロセスをサーバ，こうされているオブジェクトを利
+ オブジェクトを公開するプロセスをサーバ，公開されているオブジェクトを利
  用するプロセスをクライアントとする．また，サーバ側で公開されているオブ
  ジェクトをリモートオブジェクト，クライアント側のオブジェクトをローカル
  オブジェクトとする．
@@ -83,8 +83,8 @@
  ング$\rightarrow$テストというサイクルを短く繰り返す開発手法である．
  
  \subsection{例: 順列}
- GaucheとGauche用のテスティングフレームワークGaUnitを用いて．順列
- を生成する手続き\texttt{permutations}を作成する．
+ GaucheとGauche用のテスティングフレームワークGaUnitを用いて順列を生成す
+ る手続き\texttt{permutations}を作成する．
 
  まず，テストを作成する．
  \begin{alltt}(use test.unit)
