--- a/README.ja
+++ b/README.ja
@@ -44,6 +44,9 @@ Gauche用のサーバ/クライアント方式Webベースアプリケーションフ
   * esm以外の(MVCの)View構築支援ライブラリのサポート
   * ログ出力
   * グループ(あるいは役割(role))によるアクセス制御
+  * マルチスレッドセーフ
+    * 現在，dsmはselectでクライアントからの要求を処理してい
+      るのでこの機能は必須ではない．
 
 以下のような機能はさほど興味がありません．
 
