* Added charset normalizer.

--- a/README.ja
+++ b/README.ja
@@ -19,9 +19,9 @@ GPL or BSD License
 == なにこれ？
 
 Gauche用のサーバ/クライアント方式Webベースアプリケーションフ
-レームワークです．現在はHTTP用モジュールしかありませんが，将
-来はSMTPやGUIツールキット用のモジュールも追加しようと思って
-います．
+レームワークです．現在はHTTP用/phttpdサーブレット用/メール用
+モジュールしかありませんが，将来はGUIツールキット用のモジュー
+ルも追加しようと思っています．
 
 以下のような機能があります．
 
